Fix alignment in feedback form

--- a/src/services/feedback-form/feedback-form.scss
+++ b/src/services/feedback-form/feedback-form.scss
@@ -26,7 +26,8 @@
 
     header p {
         margin-bottom: 0;
-        font-size: 1.6rem;
+        margin-top: 1rem;
+        font-size: 1.4rem;
     }
 
     .grid .row {
